fixed buttuon contrast issue.

--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -407,7 +407,7 @@ label {
 
 #join-form button {
     color: var(--accent1);
-    background-color: #fefefe;
+    background-color: #151515;
 }
 
 #join-form button:hover {
